[gd_scene load_steps=2 format=3 uid="uid://btm35atd4lxla"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_xh3fs"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_xh3fs")

[node name="r1" type="Button" parent="."]
offset_left = 240.0
offset_top = 163.0
offset_right = 403.0
offset_bottom = 251.0

[node name="r2" type="Button" parent="."]
offset_left = 745.0
offset_top = 176.0
offset_right = 897.0
offset_bottom = 267.0

[node name="r3" type="Button" parent="."]
offset_left = 272.0
offset_top = 339.0
offset_right = 429.0
offset_bottom = 438.0

[node name="r4" type="Button" parent="."]
offset_left = 678.0
offset_top = 347.0
offset_right = 817.0
offset_bottom = 427.0

[node name="respuesta" type="Label" parent="."]
offset_left = 497.0
offset_top = 486.0
offset_right = 641.0
offset_bottom = 568.0

[node name="p" type="Label" parent="."]
offset_left = 264.0
offset_top = 59.0
offset_right = 841.0
offset_bottom = 138.0

[node name="quiz" type="Label" parent="."]
offset_left = 446.0
offset_top = 4.0
offset_right = 794.0
offset_bottom = 116.0
text = "preguntas de anatomia"

[node name="Tiempo para responder" type="Timer" parent="."]

[connection signal="pressed" from="r1" to="." method="_on_r_1_pressed"]
[connection signal="pressed" from="r2" to="." method="_on_r_2_pressed"]
[connection signal="pressed" from="r3" to="." method="_on_r_3_pressed"]
[connection signal="pressed" from="r4" to="." method="_on_r_4_pressed"]
